--- a/record3 15 oct.ipynb
+++ b/record3 15 oct.ipynb
@@ -1,4 +1,3 @@
-
 {
  "cells": [
   {
@@ -54,10 +53,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "67d7d425",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter a string:onion\n",
+      "new string is : oni$n\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. replacing letters in string\n",
     "s=str(input(\"enter a string:\"))\n",
@@ -141,16 +149,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "85bb715d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter colorset-1 :black,red,white\n",
+      "enter colorset-2 :red,blue\n",
+      "{'white', 'black'}\n"
+     ]
+    }
+   ],
    "source": [
     "# 7. color 1 not in color 2\n",
     "f=set (input(\"enter colorset-1 :\").split(\",\"))\n",
     "s=set (input(\"enter colorset-2 :\").split(\",\"))\n",
     "diff=f-s\n",
-    "print({f\"{diff}\"})"
+    "print(f\"{diff}\")"
    ]
   },
   {
